transactions-service/k8s/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: transactions-ms-dr
  namespace: banking
spec:
  host: transactions-service.banking.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 200
      http:
        http2MaxRequests: 2000
        maxRequestsPerConnection: 20
    outlierDetection:
      consecutiveGatewayErrors: 3
      interval: 10s
      baseEjectionTime: 30s
