transactions-service/k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: transactions-ms-vs
  namespace: banking
spec:
  hosts:
    - transactions-service.banking.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /api/v1/transactions
      timeout: 30s
      retries:
        attempts: 0          # ZERO retries — no duplicate debits ever
      route:
        - destination:
            host: transactions-service.banking.svc.cluster.local
            port:
              number: 8082
