transactions-service/k8s/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: transactions-ms-policy
  namespace: banking
spec:
  selector:
    matchLabels:
      app: transactions-ms
  action: ALLOW
  rules:
    # Only API Gateway can initiate transactions
    - from:
        - source:
            principals:
              - "cluster.local/ns/banking/sa/api-gateway-sa"
      to:
        - operation:
            methods: ["GET","POST"]
            paths: ["/api/v1/transactions/*", "/api/v1/transactions"]
    # Monitoring
    - from:
        - source:
            namespaces: ["monitoring"]
      to:
        - operation:
            paths: ["/actuator/health", "/actuator/prometheus"]
